force-app/main/default/objects/GiftCommitmentSchedule/GiftCommitmentSchedule.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>