force-app/main/default/objects/GiftCommitmentSchedule/fields/Fareshare_Recurring_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Fareshare_Recurring_Gift_Type__c</fullName>
    <label>Fareshare Recurring Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>