force-app/main/default/objects/GiftCommitmentSchedule/fields/FareShare_Transaction_Day__c.field-meta.xml
<CustomField>
    <fullName>FareShare_Transaction_Day__c</fullName>
    <label>FareShare Transaction Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>