force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Bank_Statement_Description__c.field-meta.xml
<CustomField>
    <fullName>fdff__Bank_Statement_Description__c</fullName>
    <label>Bank Statement Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>