force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Custom_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>fdff__Custom_Payment_Reference__c</fullName>
    <label>Custom Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>