force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Final_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>fdff__Final_Payment_Reference__c</fullName>
    <description>The payment reference for this Gift Commitment Schedule.</description>
    <formula>IF ( NOT ( ISBLANK ( fdff__Custom_Payment_Reference__c ) ) , fdff__Custom_Payment_Reference__c , fdff__Generated_Payment_Reference__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The payment reference for this Gift Commitment Schedule.</inlineHelpText>
    <label>Final Payment Reference</label>
    <type>Text</type>
</CustomField>