force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Mandate__c.field-meta.xml
<CustomField>
    <fullName>fdff__Mandate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mandate</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>cpm__Mandate__c.cpm__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cpm__Mandate__c.cpm__Payment_Profile__c</field>
            <operation>equals</operation>
            <valueField>$Source.fdff__Payment_Profile__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.fdff__Payment_Profile__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cpm__Mandate__c</referenceTo>
    <relationshipLabel>Gift Commitment Schedules</relationshipLabel>
    <relationshipName>Gift_Commitment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>