force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>fdff__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>fdff__Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PaymentHub-Stripe</fullName>
            </value>
            <value>
                <fullName>FinDock-GoCardless</fullName>
            </value>
            <value>
                <fullName>PaymentHub-PayPal</fullName>
            </value>
            <value>
                <fullName>PaymentHub-GiftAid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>