force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Payment_QR__c.field-meta.xml
<CustomField>
    <fullName>fdff__Payment_QR__c</fullName>
    <label>Payment QR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>