force-app/main/default/objects/GiftCommitmentSchedule/fields/fdff__Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>fdff__Payment_Url__c</fullName>
    <label>Payment Url</label>
    <type>Url</type>
</CustomField>