force-app/main/default/objects/GiftCommitmentSchedule/fields/First_Transaction_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Day__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(TEXT(TransactionDay))),
        OR(
            TODAY() &gt;= DATE(YEAR(TODAY()), MONTH(TODAY()), VALUE(TEXT(TransactionDay))) - 5,
            TODAY() &lt;= DATE(YEAR(TODAY()), MONTH(TODAY()), VALUE(TEXT(TransactionDay))) + 5
        )
    ),
    DATE(
        YEAR(ADDMONTHS(TODAY(), 1)),
        MONTH(ADDMONTHS(TODAY(), 1)),
        VALUE(TEXT(TransactionDay))
    ),
    IF(
        TODAY() &lt;= DATE(YEAR(TODAY()), MONTH(TODAY()), VALUE(TEXT(TransactionDay))),
        DATE(
            YEAR(TODAY()),
            MONTH(TODAY()),
            VALUE(TEXT(TransactionDay))
        ),
        DATE(
            YEAR(ADDMONTHS(TODAY(), 1)),
            MONTH(ADDMONTHS(TODAY(), 1)),
            VALUE(TEXT(TransactionDay))
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Transaction Day</label>
    <type>Date</type>
</CustomField>