force-app/main/default/objects/GiftCommitmentSchedule/listViews/All_GiftCommitmentSchedules.listView-meta.xml
<ListView>
    <fullName>All_GiftCommitmentSchedules</fullName>
    <filterScope>Everything</filterScope>
    <label>All Gift Commitment Schedules</label>
</ListView>